--- a/space-tourism/package.json
+++ b/space-tourism/package.json
@@ -28,6 +28,7 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.0.3",
+        "@vitest/ui": "^1.2.0",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
