--- a/space-tourism/package.json
+++ b/space-tourism/package.json
@@ -8,7 +8,8 @@
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "test": "vitest"
+        "test": "vitest --run",
+        "test:watch": "vitest"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.0.1",
@@ -33,6 +34,7 @@
         "eslint": "^8.45.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "eslint-plugin-react-refresh": "^0.4.3",
+        "jsdom": "^23.2.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.4.1",
         "ts-node": "^10.9.2",
