--- a/space-tourism/package.json
+++ b/space-tourism/package.json
@@ -9,6 +9,8 @@
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
         "test": "vitest --run",
+        "test:ui": "vitest --ui",
+        "test:coverage": "vitest --run --coverage",
         "test:watch": "vitest"
     },
     "dependencies": {
@@ -29,6 +31,7 @@
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
         "@vitejs/plugin-react": "^4.0.3",
+        "@vitest/coverage-v8": "^1.2.1",
         "@vitest/ui": "^1.2.0",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.45.0",
